--- a/dosbox_pure_libretro.vcxproj
+++ b/dosbox_pure_libretro.vcxproj
@@ -251,6 +251,8 @@
       <BasicRuntimeChecks Condition="'$(Configuration)'=='Debug'">Default</BasicRuntimeChecks>
       <WarningLevel>Level2</WarningLevel>
     </ClCompile>
+    <ClCompile Include="src\gamelink\gamelink.cpp" />
+    <ClCompile Include="src\gamelink\gamelink_term.cpp" />
     <ClCompile Include="src\gui\midi.cpp">
       <Optimization Condition="'$(Configuration)'=='Debug'">MaxSpeed</Optimization>
       <BasicRuntimeChecks Condition="'$(Configuration)'=='Debug'">Default</BasicRuntimeChecks>
@@ -623,6 +625,7 @@
     <ClInclude Include="src\dos\wnaspi32.h" />
     <ClInclude Include="src\fpu\fpu_instructions.h" />
     <ClInclude Include="src\fpu\fpu_instructions_x86.h" />
+    <ClInclude Include="src\gamelink\gamelink.h" />
     <ClInclude Include="src\gui\midi_mt32.h" />
     <ClInclude Include="src\gui\midi_retro.h" />
     <ClInclude Include="src\gui\midi_tsf.h" />
