--- a/dosbox_pure_libretro.vcxproj.filters
+++ b/dosbox_pure_libretro.vcxproj.filters
@@ -121,6 +121,12 @@
     <ClCompile Include="src\fpu\fpu.cpp">
       <Filter>src\fpu</Filter>
     </ClCompile>
+    <ClCompile Include="src\gamelink\gamelink.cpp">
+      <Filter>src\gamelink</Filter>
+    </ClCompile>
+    <ClCompile Include="src\gamelink\gamelink_term.cpp">
+      <Filter>src\gamelink</Filter>
+    </ClCompile>
     <ClCompile Include="src\gui\midi.cpp">
       <Filter>src\gui</Filter>
     </ClCompile>
@@ -605,6 +611,9 @@
     <ClInclude Include="src\fpu\fpu_instructions_x86.h">
       <Filter>src\fpu</Filter>
     </ClInclude>
+    <ClInclude Include="src\gamelink\gamelink.h">
+      <Filter>src\gamelink</Filter>
+    </ClInclude>
     <ClInclude Include="src\gui\midi_mt32.h">
       <Filter>src\gui</Filter>
     </ClInclude>
@@ -674,6 +683,7 @@
     <Filter Include="src\dos" />
     <Filter Include="src\fpu" />
     <Filter Include="src\gui" />
+    <Filter Include="src\gamelink" />
     <Filter Include="src\hardware\mame" />
     <Filter Include="src\hardware\serialport" />
     <Filter Include="src\hardware" />
