Move shared memory structures ant its initialization to separate file

--- a/dosbox_pure_libretro.vcxproj
+++ b/dosbox_pure_libretro.vcxproj
@@ -627,6 +627,9 @@
     <ClInclude Include="src\fpu\fpu_instructions.h" />
     <ClInclude Include="src\fpu\fpu_instructions_x86.h" />
     <ClInclude Include="src\gamelink\gamelink.h" />
+    <ClInclude Include="src\gamelink\gamelink_term.h" />
+    <ClInclude Include="src\gamelink\shared_data.h" />
+    <ClInclude Include="src\gamelink\utils\macros.h" />
     <ClInclude Include="src\gui\midi_mt32.h" />
     <ClInclude Include="src\gui\midi_retro.h" />
     <ClInclude Include="src\gui\midi_tsf.h" />
