--- a/dosbox_pure_libretro.vcxproj
+++ b/dosbox_pure_libretro.vcxproj
@@ -628,8 +628,13 @@
     <ClInclude Include="src\fpu\fpu_instructions_x86.h" />
     <ClInclude Include="src\gamelink\gamelink.h" />
     <ClInclude Include="src\gamelink\gamelink_term.h" />
+    <ClInclude Include="src\gamelink\platform\posix\mutex.h" />
+    <ClInclude Include="src\gamelink\platform\posix\shared_memory.h" />
+    <ClInclude Include="src\gamelink\platform\windows\mutex.h" />
+    <ClInclude Include="src\gamelink\platform\windows\shared_memory.h" />
+    <ClInclude Include="src\gamelink\program_hash.h" />
     <ClInclude Include="src\gamelink\shared_data.h" />
-    <ClInclude Include="src\gamelink\utils\macros.h" />
+    <ClInclude Include="src\gamelink\utils.h" />
     <ClInclude Include="src\gui\midi_mt32.h" />
     <ClInclude Include="src\gui\midi_retro.h" />
     <ClInclude Include="src\gui\midi_tsf.h" />
